# wasmshield

./: .gitignore  Cargo.toml  README.md
.cargo/: audit.toml
crates/wasmshield/: Cargo.toml
crates/wasmshield/src/: decompose.rs  lib.rs  sbom.rs  signature.rs
src/: commands.rs  lib.rs
src/commands/: sbom.rs  signature.rs
test/: test.rs
