[package]
name = "wasmshield-cli"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A CLI Tool for verifying Web Assembly components"
homepage = "https://github.com/TitusVM/wasmshield"
repository = "https://github.com/TitusVM/wasmshield"
readme = "README.md"
categories = ["command-line-utilities"]


[dependencies]
anyhow = "1.0.93"
clap = "4.5.21" 
toml = "0.8.19"
wasmparser = "0.220.0"
wasmshield = { version = "0.1.0", path = "./crates/wasmshield" }
rustsec = { path = "../pr/rustsec/rustsec" }

[features]
default = [
  "sbom",
  "signature"
]

sbom = []
signature = []
