[workspace]
members = ["crates/*"]

[workspace.package]
name = "wasmshield-cli"
description = "A CLI Tool for verifying WebAssembly components"
homepage = "https://github.com/TitusVM/wasmshield"
repository = "https://github.com/TitusVM/wasmshield"
readme = "README.md"
categories = ["command-line-utilities"]
edition = "2021"
version = "0.1.0"
authors = ["Titus Abele"]
license = "MIT OR Apache-2.0"


[workspace.dependencies]
anyhow = "1.0.93"
clap = "4.5.21" 
toml = "0.8.19"
wasmparser = "0.220.0"
wasmshield = { version = "0.1.0", path = "./crates/wasmshield" }
