[package]
name = "wasmshield"
description = "Library for verifying Web Assembly components"
homepage.workspace = true
repository.workspace = true
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
readme = "../../README.md"

[dependencies]
wasmparser = "0.220.0"
anyhow = "1.0.93"
toml = "0.8.19"
wasmsign2 = "0.2.6"
# rustsec = "0.30.0"
tempfile = "3.14.0"
serde_json = "1.0.133"
miniz_oxide = "0.8.0"

cargo-audit = { path = "../../../pr/rustsec/cargo-audit" }
rustsec = { path = "../../../pr/rustsec/rustsec" }