[package]
name = "wasmshield"
version = "0.1.0"
description = "Library for verifying WebAssembly components"
homepage = "https://github.com/TitusVM/wasmshield"
repository = "https://github.com/TitusVM/wasmshield"
edition = "2021"
authors = ["Titus Abele"]
license = "MIT OR Apache-2.0"

[dependencies]
wasmparser = "0.220.0"
anyhow = "1.0.93"
toml = "0.8.19"
wasmsign2 = "0.2.6"
rustsec = "0.30.1"
tempfile = "3.14.0"
cargo-audit = "0.21.1"
serde_json = "1.0.133"
miniz_oxide = "0.8.0"
lazy_static = "1.5.0"